<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity"
    android:background="@color/alice_blue">

    <TextView
        android:id="@+id/text_challengeCompleted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:fontFamily="sans-serif"
        android:letterSpacing="0"
        android:text="@string/challengeCompleted"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_scoreResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_challengeCompleted"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.1"
        android:text="Results\n\n10/10\n\n80.00%"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_questionNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.1"
        android:text="Question #: "
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_submitAnswer"
        android:layout_below="@id/text_questionNumber">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical">

            <HorizontalScrollView
                android:id="@+id/scrollView_question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <TextView
                    android:id="@+id/text_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:fontFamily="sans-serif"
                    android:letterSpacing="0"
                    android:text="Question goes here."
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </HorizontalScrollView>

            <RadioGroup
                android:id="@+id/radioGroup_answerChoices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin">

                <RadioButton
                    android:id="@+id/radioButton_choice1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@color/common_google_signin_btn_text_light_default"
                    android:fontFamily="sans-serif"
                    android:letterSpacing="0"
                    android:text="Choice 1 goes here"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButton_choice2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@color/common_google_signin_btn_text_light_default"
                    android:fontFamily="sans-serif"
                    android:letterSpacing="0"
                    android:text="Choice 2 goes here"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButton_choice3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@color/common_google_signin_btn_text_light_default"
                    android:fontFamily="sans-serif"
                    android:letterSpacing="0"
                    android:text="Choice 3 goes here"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButton_choice4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@color/common_google_signin_btn_text_light_default"
                    android:fontFamily="sans-serif"
                    android:letterSpacing="0"
                    android:text="Choice 4 goes here"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </RadioGroup>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_showHint"
                    android:background="@color/hintButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:fontFamily="sans-serif-medium"
                    android:letterSpacing="0.15"
                    android:text="@string/showHint"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:fontFamily="sans-serif"
                    android:text="Hint goes here"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:visibility="invisible" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button_submitAnswer"
        android:background="@color/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.15"
        android:text="@string/submitAnswer"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_nextQuestion"
        android:background="@color/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.15"
        android:text="@string/nextQuestion"
        android:textSize="14sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/text_resultFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_repeatChallenge"
        android:fontFamily="sans-serif"
        android:letterSpacing="0"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_repeatChallenge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_backToHomepage"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.15"
        android:text="@string/repeatChallenge"
        android:textSize="14sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_backToHomepage"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.15"
        android:text="@string/backToHomepage"
        android:textSize="14sp"
        android:visibility="invisible" />

</RelativeLayout>